| Summary: | ASTERISK-30007: chan_iax2: Prevent crashes due to attempted encryption with missing secrets | ||||
| Reporter: | N A (InterLinked) | Labels: | |||
| Date Opened: | 2022-04-02 16:00:36 | Date Closed: | 2022-05-02 08:54:49 | ||
| Priority: | Critical | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_iax2 | ||
| Versions: | 18.10.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Debian | Attachments: | |||
| Description: | This fixes a crash that can occur in chan_iax2 when the remote peer *only* supports rsa auth but no outkey is specified when trying to dial the remote peer.
Additionally, this reduces the opportunity for similar crashes to happen in the future by explicitly checking to make sure that keys exist before enabling encryption since this has caused crashes in the past, e.g. https://issues.asterisk.org/jira/browse/ASTERISK-29264 This occurs because if for any reason encryption is attempted but keys do not exist, a segfault will occur. In such cases, rather than crashing, a warning will be thrown and the call will exit. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2022-04-02 16:00:37.443-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-05-02 08:54:50.690-0500 Change 18484 merged by Joshua Colp: chan_iax2: Prevent crash if dialing RSA-only call without outkey. [https://gerrit.asterisk.org/c/asterisk/+/18484|https://gerrit.asterisk.org/c/asterisk/+/18484] By: Friendly Automation (friendly-automation) 2022-05-02 08:55:08.534-0500 Change 18485 merged by Joshua Colp: chan_iax2: Prevent crash if dialing RSA-only call without outkey. [https://gerrit.asterisk.org/c/asterisk/+/18485|https://gerrit.asterisk.org/c/asterisk/+/18485] By: Friendly Automation (friendly-automation) 2022-05-02 08:56:52.792-0500 Change 18486 merged by Joshua Colp: chan_iax2: Prevent crash if dialing RSA-only call without outkey. [https://gerrit.asterisk.org/c/asterisk/+/18486|https://gerrit.asterisk.org/c/asterisk/+/18486] By: Friendly Automation (friendly-automation) 2022-05-02 08:57:00.541-0500 Change 18363 merged by Joshua Colp: chan_iax2: Prevent crash if dialing RSA-only call without outkey. [https://gerrit.asterisk.org/c/asterisk/+/18363|https://gerrit.asterisk.org/c/asterisk/+/18363] | ||||